--- a/views/new.ejs
+++ b/views/new.ejs
@@ -8,5 +8,20 @@
 </head>
 <body>
     <h1>NEW</h1>
+    <form action="/label" method="POST">
+        <label for="artistName"> Artist Name:</label>
+        <input type="text" name="artistName">
+        <br>
+        <label for="genre"> Genre:</label>
+        <input type="text" name="genre">
+        <br>
+        <label for="location"> Location:</label>
+        <input type="text" name="location">
+        <br>
+        <label for="spotify"> Spotify:</label>
+        <input type="text" name="spotify">
+        <br>
+        <input type="submit" value="add">
+    </form>    
 </body>
 </html>
