--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -8,5 +8,22 @@
 </head>
 <body>
     <h1>EDIT <%= oneArtist.artistName  %> </h1>
+
+    <h1>here are your edits</h1>
+    <form action="/label/<%= oneArtist._id %>?_method=PUT" method="POST">
+        <label for="artistName"> Artist:</label>
+        <input type="text" name="artistName" value="<%= oneArtist.artistName %>">
+        <br>
+        <label for="genre"> Genre:</label>
+        <input type="text" name="genre" value="<%= oneArtist.genre %>">
+        <br>
+        <label for="location"> Location:</label>
+        <input type="text" name="location" value="<%= oneArtist.location %>">
+        <br>
+        <label for="spotify"> Spotify:</label>
+        <input type="text" name="spotify" value="<%= oneArtist.spotify %>">
+        <br>
+        <input type="submit" value="add">
+    </form>
 </body>
 </html>
