--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,10 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Artists</title>
 </head>
 <body>
-    <h1>Artists</h1>
+    <%- include('./partials/nav')  %> 
+
+    <form id="search-bar">
+        <input 
+            id="search-term"
+            type="text"
+            placeholder="Search"
+            value=""
+        >
+        <input type="submit">
+    </form>
 
     <% for(let i = 0; i < allArtists.length; i++) {%> 
         <a href="/label/<%= allArtists[i]._id %> ">
