--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <%- include('./partials/nav')  %>
     <h1>EDIT <%= oneArtist.artistName  %> </h1>
 
     <h1>here are your edits</h1>
