--- a/views/new.ejs
+++ b/views/new.ejs
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Submissions</title>
 </head>
 <body>
-    <h1>NEW</h1>
+    <%- include('./partials/nav')  %>
+    <h1>Submissions</h1>
     <form action="/label" method="POST">
         <label for="artistName"> Artist Name:</label>
         <input type="text" name="artistName">
