--- a/views/show.ejs
+++ b/views/show.ejs
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title><%= oneArtist.artistName  %></title>
 </head>
 <body>
+    <%- include('./partials/nav')  %> 
     <strong>
         <h1><%= oneArtist.artistName  %> </h1>
     </strong>
     <p><%= oneArtist.genre %> </p>
     <p><%= oneArtist.location %> </p>
     <iframe src="<%= oneArtist.spotify %> " width="100%" height="380" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+
+    <a href="/label/<%= oneArtist._id %>/edit ">Edit</a>
 </body>
 </html>
