--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -21,6 +21,9 @@
         <label for="location"> Location:</label>
         <input type="text" name="location" value="<%= oneArtist.location %>">
         <br>
+        <label for="follow"> Follow:</label>
+        <input type="text" name="follow" value="<%= oneArtist.follow %>">
+        <br>
         <label for="spotify"> Spotify:</label>
         <input type="text" name="spotify" value="<%= oneArtist.spotify %>">
         <br>
