--- a/views/new.ejs
+++ b/views/new.ejs
@@ -19,6 +19,9 @@
         <label for="location"> Location:</label>
         <input type="text" name="location">
         <br>
+        <label for="follow"> Follow:</label>
+        <input type="text" name="follow">
+        <br>
         <label for="spotify"> Spotify:</label>
         <input type="text" name="spotify">
         <br>
