--- a/views/show.ejs
+++ b/views/show.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= oneArtist.artistName  %></title>
+    <title><%= oneArtist.artistName  %> | Label </title>
 </head>
 <body>
     <%- include('./partials/nav')  %> 
@@ -13,6 +13,7 @@
     </strong>
     <p><%= oneArtist.genre %> </p>
     <p><%= oneArtist.location %> </p>
+    <iframe src="<%= oneArtist.follow %> " width="300" height="56" scrolling="no" frameborder="0" style="border:none; overflow:hidden;" allowtransparency="true"></iframe>
     <iframe src="<%= oneArtist.spotify %> " width="100%" height="380" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 
     <a href="/label/<%= oneArtist._id %>/edit ">Edit</a>
