app.css connected

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="app.css">
     <title>Home | Label</title>
 </head>
 <body>
@@ -11,3 +12,7 @@
     <h1>Label</h1> 
 </body>
 </html>
+
+https://media.gq-magazine.co.uk/photos/5eaab3bfb7ebbc00082c8369/4:3/w_1440,h_1080,c_limit/20200430-Doja-Cat.jpg
+https://media.pitchfork.com/photos/606fd4275aedaea021481c58/2:1/w_2560%2Cc_limit/doja-cat-sza.jpg
+https://imgix.ranker.com/user_node_img/4269/85376843/original/85376843-photo-u4?w=350&h=350&q=90&fm=jpg&fit=crop&crop=faces
