--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/app.css">
     <title>Artists | Label</title>
 </head>
 <body>
@@ -21,7 +22,8 @@
 
     <% for(let i = 0; i < allArtists.length; i++) {%> 
         <a href="/label/<%= allArtists[i]._id %> ">
-            <h2><%= allArtists[i].artistName %> </h2>
+            <h2 class="artist-list"><%= allArtists[i].artistName %> </h2>
+            
             <% } %>    
 </body>
 </html>
