--- a/views/new.ejs
+++ b/views/new.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/app.css">
     <title>Submissions | Label</title>
 </head>
 <body>
@@ -24,6 +25,9 @@
         <br>
         <label for="spotify"> Spotify:</label>
         <input type="text" name="spotify">
+        <br>
+        <label for="images"> Images:</label>
+        <input type="text" name="images">
         <br>
         <input type="submit" value="add">
     </form>    
