--- a/views/show.ejs
+++ b/views/show.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/app.css">
     <title><%= oneArtist.artistName  %> | Label </title>
 </head>
 <body>
@@ -13,6 +14,7 @@
     </strong>
     <p><%= oneArtist.genre %> </p>
     <p><%= oneArtist.location %> </p>
+    <img class="artist-pics" src="<%= oneArtist.images[0] %> " alt="" srcset="">
     <iframe src="<%= oneArtist.follow %> " width="300" height="56" scrolling="no" frameborder="0" style="border:none; overflow:hidden;" allowtransparency="true"></iframe>
     <iframe src="<%= oneArtist.spotify %> " width="100%" height="380" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 
