--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,7 +22,10 @@
 
     <% for(let i = 0; i < allArtists.length; i++) {%> 
         <a href="/label/<%= allArtists[i]._id %> ">
-            <h2 class="artist-list"><%= allArtists[i].artistName %> </h2>
+            <figure class="artist-list">
+                <img src="<%= allArtists[i].images[0] %> " alt="Image of" >
+                <figcaption><%= allArtists[i].artistName %> </figcaption>
+            </figure>
             
             <% } %>    
 </body>
