--- a/views/show.ejs
+++ b/views/show.ejs
@@ -14,7 +14,10 @@
     </strong>
     <p><%= oneArtist.genre %> </p>
     <p><%= oneArtist.location %> </p>
-    <img class="artist-pics" src="<%= oneArtist.images[0] %> " alt="" srcset="">
+    <img class="artist-pics" src="<%= oneArtist.images[0] %> " alt="Image of <%= oneArtist.artistName%>" >
+    <img class="artist-pics" src="<%= oneArtist.images[1] %> " alt="Image of <%= oneArtist.artistName%>" >
+    <img class="artist-pics" src="<%= oneArtist.images[2] %> " alt="Image of <%= oneArtist.artistName%>" >
+
     <iframe src="<%= oneArtist.follow %> " width="300" height="56" scrolling="no" frameborder="0" style="border:none; overflow:hidden;" allowtransparency="true"></iframe>
     <iframe src="<%= oneArtist.spotify %> " width="100%" height="380" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 
