--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,14 +5,54 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="app.css">
+    <link rel="stylesheet" href="slider.css">
     <title>Home | Label</title>
 </head>
 <body>
     <%- include('./partials/nav')  %>
     <h1>Label</h1> 
+    <section id="carousel">
+
+        <div class="slider">
+            <div class="slides">
+                <!-- radio buttons -->
+                <input type="radio" name="radio-btn" id="radio1">
+                <input type="radio" name="radio-btn" id="radio2">
+                <input type="radio" name="radio-btn" id="radio3">
+                <input type="radio" name="radio-btn" id="radio4">
+    
+                <!-- images -->
+                <div class="slide first">
+                    <img src="https://media.california.com/media/_versions/articlecomponent/sacramento_ca_skyline__1000x749___v1220x913.jpg">
+                </div>
+                <div class="slide">
+                    <img src="https://cdn.vox-cdn.com/thumbor/Ksi3v8e1tj1ZcQeRV1ZtmCYIM7k=/0x0:4284x2916/1200x800/filters:focal(1800x1116:2484x1800)/cdn.vox-cdn.com/uploads/chorus_image/image/61918529/NorthBroadSt_Landscape_1_M.Edlow.0.jpg">
+                </div>
+                <div class="slide">
+                    <img src="https://www.usnews.com/dims4/USNEWS/ed0681c/2147483647/thumbnail/640x420/quality/85/?url=http%3A%2F%2Fmedia.beam.usnews.com%2F5e%2F82%2Fae712aec42e79a62d07c998b8db8%2F191016-crosswalksfca-editorial.jpg">
+                </div>
+                <div class="slide">
+                    <img src="https://www.dallascitynews.net/wp-content/uploads/2016/08/Dallas-from-City-Hall.jpg">
+                </div>
+                 <!-- auto navigation -->
+                <div class="navigation-auto">
+                    <div class="auto-btn1"></div>
+                    <div class="auto-btn2"></div>
+                    <div class="auto-btn3"></div>
+                    <div class="auto-btn4"></div>
+                </div>
+    
+                <!-- manual navigation -->
+                <div class="navigation-manual">
+                    <label for="radio1" class="manual-btn"></label>
+                    <label for="radio2" class="manual-btn"></label>
+                    <label for="radio3" class="manual-btn"></label>
+                    <label for="radio4" class="manual-btn"></label>
+                </div>
+    
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
-
-https://media.gq-magazine.co.uk/photos/5eaab3bfb7ebbc00082c8369/4:3/w_1440,h_1080,c_limit/20200430-Doja-Cat.jpg
-https://media.pitchfork.com/photos/606fd4275aedaea021481c58/2:1/w_2560%2Cc_limit/doja-cat-sza.jpg
-https://imgix.ranker.com/user_node_img/4269/85376843/original/85376843-photo-u4?w=350&h=350&q=90&fm=jpg&fit=crop&crop=faces
