--- a/public/slider.css
+++ b/public/slider.css
@@ -5,7 +5,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #23E3C9;
+    /* background: #23E3C9; */
 }
 
 .slider {
@@ -40,7 +40,7 @@
 .navigation-manual{
     position: absolute;
     width: 800px;
-    margin-top: -40px;
+    margin-top: 460px;
     display: flex;
     justify-content: center;
 }
@@ -59,4 +59,54 @@
 
 .manual-btn:hover {
     background-color: white
+}
+
+#radio1:checked ~ .first{
+    margin-left: 0;
+}
+
+#radio2:checked ~ .first{
+    margin-left: -20%;
+}
+
+#radio3:checked ~ .first{
+    margin-left: -40%;
+}
+
+#radio4:checked ~ .first{
+    margin-left: -60%;
+}
+
+/* automatic navigation */
+
+.navigation-auto {
+    position: absolute;
+    display: flex;
+    width: 800px;
+    justify-content: center;
+    margin-top: 460px;
+}
+
+.navigation-auto div {
+    border: 2px solid white;
+    padding: 5px;
+    border-radius: 10px;
+    transition: 1s;
+}
+
+.navigation-auto div:not(:last-child) {
+    margin-right: 40px;
+}
+
+#radio1:checked ~ .navigation-auto .auto-btn1 {
+    background: burlywood;
+}
+#radio2:checked ~ .navigation-auto .auto-btn2 {
+    background: burlywood;
+}
+#radio3:checked ~ .navigation-auto .auto-btn3 {
+    background: burlywood;
+}
+#radio4:checked ~ .navigation-auto .auto-btn4 {
+    background: burlywood;
 }
