--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,8 +11,8 @@
 <body>
     <%- include('./partials/nav')  %>
     <h1>Label</h1> 
+    <!-- CAROUSEL -->
     <section id="carousel">
-
         <div class="slider">
             <div class="slides">
                 <!-- radio buttons -->
@@ -49,7 +49,19 @@
                     <label for="radio3" class="manual-btn"></label>
                     <label for="radio4" class="manual-btn"></label>
                 </div>
-    
+
+                <script type="text/javascript">
+                 let counter = 1;  
+                 setInterval(function(){ 
+                    document.getElementById('radio' + counter).checked = true; 
+                      counter++ 
+                      if(counter > 4) { 
+                              counter = 1; 
+                          } 
+                }, 5000);  
+
+                </script>
+
             </div>
         </div>
     </section>
