--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,7 +10,7 @@
 </head>
 <body>
     <%- include('./partials/nav')  %>
-    <h1>Label</h1> 
+    <h1>Welcome to Label</h1> 
     <!-- CAROUSEL -->
     <section id="carousel">
         <div class="slider">
