--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,6 +1,6 @@
 <nav>
-
     <span>
+        <h1><em>Label</em></h1>
         <a href="/">Home</a>
         <a href="/label">Artists</a>
         <a href="/label/new">Submissions</a>
