--- a/views/show.ejs
+++ b/views/show.ejs
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/app.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
+    <link rel="stylesheet" href="/share.css">
     <title><%= oneArtist.artistName  %> | Label </title>
 </head>
 <body>
@@ -12,6 +14,16 @@
     <strong>
         <h1><%= oneArtist.artistName  %> </h1>
     </strong>
+    <section id="share-section">
+        <div class="share-button">
+            <span><i class="fas fa-share-alt"></i> More <%= oneArtist.artistName%>!</span>
+            <a href="#"><i class="fab fa-facebook-square"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-youtube"></i></a>
+        </div>
+    </section>
+
     <p><%= oneArtist.genre %> </p>
     <p><%= oneArtist.location %> </p>
     <img class="artist-pics" src="<%= oneArtist.images[0] %> " alt="Image of <%= oneArtist.artistName%>" >
