schema updated, gif, video added

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -30,11 +30,17 @@
         <label for="images"> Images:</label>
         <input type="text" name="images" value="<%= oneArtist.images %>">
         <br>
+        <label for="gif"> Gif:</label>
+        <input type="text" name="gif" value="<%= oneArtist.gif %>">
+        <br>
+        <label for="video"> Video:</label>
+        <input type="text" name="video" value="<%= oneArtist.video %>">
+        <br>
         <input type="submit" value="add">
     </form>
-        
+<!--         
     <form  action="/label/<%= oneArtist._id %>?_method=DELETE " method="POST"> %>
         <input class="delete" type="submit" value="Delete <%= oneArtist.name  %> ">
-    </form>
+    </form> -->
 </body>
 </html>
