--- a/views/show.ejs
+++ b/views/show.ejs
@@ -11,6 +11,7 @@
 </head>
 <body>
     <%- include('./partials/nav')  %> 
+    <iframe src="<%= oneArtist.gif %>" width="100%" height="300" ></iframe>
     <strong>
         <h1><%= oneArtist.artistName  %> </h1>
     </strong>
@@ -32,6 +33,7 @@
 
     <iframe src="<%= oneArtist.follow %> " width="300" height="56" scrolling="no" frameborder="0" style="border:none; overflow:hidden;" allowtransparency="true"></iframe>
     <iframe src="<%= oneArtist.spotify %> " width="100%" height="380" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+    <iframe width="560" height="315" src=" <%= oneArtist.video  %> " title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
     <a href="/label/<%= oneArtist._id %>/edit ">Edit</a>
 </body>
