--- a/views/home.ejs
+++ b/views/home.ejs
@@ -23,7 +23,7 @@
     
                 <!-- images -->
                 <div class="slide first">
-                    <img src="https://media.california.com/media/_versions/articlecomponent/sacramento_ca_skyline__1000x749___v1220x913.jpg">
+                    <video src="/media/K Promo.mp4" autoplay muted loop></video>
                 </div>
                 <div class="slide">
                     <img src="https://cdn.vox-cdn.com/thumbor/Ksi3v8e1tj1ZcQeRV1ZtmCYIM7k=/0x0:4284x2916/1200x800/filters:focal(1800x1116:2484x1800)/cdn.vox-cdn.com/uploads/chorus_image/image/61918529/NorthBroadSt_Landscape_1_M.Edlow.0.jpg">
