--- a/views/show.ejs
+++ b/views/show.ejs
@@ -5,36 +5,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/app.css">
+    <link rel="stylesheet" href="/show.css">
+    <link rel="stylesheet" href="/center.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
     <link rel="stylesheet" href="/share.css">
     <title><%= oneArtist.artistName  %> | Label </title>
 </head>
 <body>
-    <%- include('./partials/nav')  %> 
-    <iframe src="<%= oneArtist.gif %>" width="100%" height="300" ></iframe>
-    <strong>
-        <h1><%= oneArtist.artistName  %> </h1>
-    </strong>
-    <section id="share-section">
-        <div class="share-button">
-            <span><i class="fas fa-share-alt"></i> More <%= oneArtist.artistName%>!</span>
-            <a href="#"><i class="fab fa-facebook-square"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-youtube"></i></a>
-        </div>
+    <header>
+        <iframe src="<%= oneArtist.gif %>" width="100%" height="300" ></iframe>
+    </header>
+    
+    <section class="sidebar">
+        <%- include('./partials/nav')  %> 
     </section>
 
-    <p><%= oneArtist.genre %> </p>
-    <p><%= oneArtist.location %> </p>
-    <img class="artist-pics" src="<%= oneArtist.images[0] %> " alt="Image of <%= oneArtist.artistName%>" >
-    <img class="artist-pics" src="<%= oneArtist.images[1] %> " alt="Image of <%= oneArtist.artistName%>" >
-    <img class="artist-pics" src="<%= oneArtist.images[2] %> " alt="Image of <%= oneArtist.artistName%>" >
+    <main>
 
-    <iframe src="<%= oneArtist.follow %> " width="300" height="56" scrolling="no" frameborder="0" style="border:none; overflow:hidden;" allowtransparency="true"></iframe>
-    <iframe src="<%= oneArtist.spotify %> " width="100%" height="380" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-    <iframe width="560" height="315" src=" <%= oneArtist.video  %> " title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    
+        <h1><%= oneArtist.artistName  %> </h1>
+    
+        <!-- <section id="share-section">
+            <div class="share-button">
+                <span><i class="fas fa-share-alt"></i> More <%= oneArtist.artistName%>!</span>
+                <a href="#"><i class="fab fa-facebook-square"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-youtube"></i></a>
+            </div>
+        </section> -->
 
-    <a href="/label/<%= oneArtist._id %>/edit ">Edit</a>
+        <p><%= oneArtist.genre %> </p>
+        <p><%= oneArtist.location %> </p>
+        <img class="artist-pics" src="<%= oneArtist.images[0] %> " alt="Image of <%= oneArtist.artistName%>" >
+
+        <!-- <iframe src="<%= oneArtist.follow %> " width="300" height="56" scrolling="no" frameborder="0" style="border:none; overflow:hidden;" allowtransparency="true"></iframe> -->
+        <!-- <iframe src="<%= oneArtist.spotify %> " width="100%" height="380" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe> -->
+        <!-- <iframe width="560" height="315" src=" <%= oneArtist.video  %> " title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+
+    </main>
+
+    <footer>
+        <a href="/label/<%= oneArtist._id %>/edit ">Edit</a>
+    </footer>
 </body>
 </html>
