--- a/views/new.ejs
+++ b/views/new.ejs
@@ -6,34 +6,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/app.css">
     <link rel="stylesheet" href="/center.css">
+    <link rel="stylesheet" href="/popup.css">
     <title>Submissions | Label</title>
 </head>
 <body>
     <%- include('./partials/nav')  %>
-    <!-- <div class="center">
-        <h1>Submissions</h1>
-        <form action="/label" method="POST">
-            <label for="artistName"> Artist Name:</label>
-            <input type="text" name="artistName">
-            <br>
-            <label for="genre"> Genre:</label>
-            <input type="text" name="genre">
-            <br>
-            <label for="location"> Location:</label>
-            <input type="text" name="location">
-            <br>
-            <label for="follow"> Follow:</label>
-            <input type="text" name="follow">
-            <br>
-            <label for="spotify"> Spotify:</label>
-            <input type="text" name="spotify">
-            <br>
-            <label for="images"> Images:</label>
-            <input type="text" name="images">
-            <br>
-            <input type="submit" value="add">
-        </form> 
-    </div>    -->
+
+   
+            <div class="center">
+                <h1>Submissions</h1>
+                <form action="/label" method="POST">
+                    <label for="artistName"> Artist Name:</label>
+                    <input type="text" name="artistName">
+                    <br>
+                    <label for="genre"> Genre:</label>
+                    <input type="text" name="genre">
+                    <br>
+                    <label for="location"> Location:</label>
+                    <input type="text" name="location">
+                    <br>
+                    <label for="follow"> Follow:</label>
+                    <input type="text" name="follow">
+                    <br>
+                    <label for="spotify"> Spotify:</label>
+                    <input type="text" name="spotify">
+                    <br>
+                    <label for="images"> Images:</label>
+                    <input type="text" name="images">
+                    <br>
+                    <input type="submit" value="add">
+                </form> 
+       
+    <p onclick="togglePopup()">Lorem Ipsum dolor sit amet, consectetur adipisicing elit</p>
     <div class="popup" id="popup-1">
         <div class="overlay"></div>
         <div class="content">
@@ -41,10 +45,18 @@
             <p>Lorem Ipsum dolor sit amet, consectetur adipisicing elit</p>
         </div>
     </div>
+
  <button onclick="togglePopup()">Show</button>
+
  <script type="text/javascript">
     function togglePopup() {
         document.getElementById("popup-1").classList.toggle("active");
+    }
+ </script>
+
+ <script type="text/javascript">
+    function togglePopup2() {
+        document.getElementById("popup-2").classList.toggle("active");
     }
  </script>
 </body>
