--- a/views/home.ejs
+++ b/views/home.ejs
@@ -23,7 +23,7 @@
     
                 <!-- images -->
                 <div class="slide first">
-                    <video src="/media/K Promo.mp4" autoplay muted loop></video>
+                    <img src="https://www.usnews.com/dims4/USNEWS/ed0681c/2147483647/thumbnail/640x420/quality/85/?url=http%3A%2F%2Fmedia.beam.usnews.com%2F5e%2F82%2Fae712aec42e79a62d07c998b8db8%2F191016-crosswalksfca-editorial.jpg">
                 </div>
                 <div class="slide">
                     <img src="https://cdn.vox-cdn.com/thumbor/Ksi3v8e1tj1ZcQeRV1ZtmCYIM7k=/0x0:4284x2916/1200x800/filters:focal(1800x1116:2484x1800)/cdn.vox-cdn.com/uploads/chorus_image/image/61918529/NorthBroadSt_Landscape_1_M.Edlow.0.jpg">
