--- a/public/app.css
+++ b/public/app.css
@@ -1,11 +1,9 @@
 nav {
     background-color: rgba(29, 115, 189, 0.208);
     text-align: center;
+    color: white;
 }
 
-.artist-pics {
-    width: 200px;
-}
 
 .artist-list {
     position: relative;
