--- a/public/popup.css
+++ b/public/popup.css
@@ -14,9 +14,9 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) scale(0);
-    background: #fff;
-    width: 450px;
-    height: 220px;
+    background: rgba(255, 255, 255, 0);
+    width: 700px;
+    height: 600px;
     z-index: 2;
     text-align: center;
     padding: 20px;
