--- a/views/show.ejs
+++ b/views/show.ejs
@@ -22,7 +22,13 @@
     </section>
 
     <main>
-        <h1 class="artist-name"><%= oneArtist.artistName  %> </h1>
+        <div class="top">
+            <h1 class="artist-name"><%= oneArtist.artistName  %> </h1>
+            <div class="tour-box">
+                <h2 class="tour">Ace of Spades: 1/4/22</h2>
+            </div>
+
+        </div>
         <span class="socials">
                <iframe class="follow" src="<%= oneArtist.follow %> " width="300" height="56" scrolling="no" frameborder="0" style="border:none; overflow:hidden;" allowtransparency="true"></iframe>
                 
