--- a/public/show.css
+++ b/public/show.css
@@ -19,10 +19,7 @@ header {
     overflow-y: hidden;
   }
 
-  .artist-name {
-      font-size: 75px
-  }
-
+  
   .sidebar-left {
       grid-column: 1 / 2;
       grid-row: 1/ 3;
@@ -52,6 +49,40 @@ header {
     padding: 2rem;
     overflow-y: auto;
   }
+
+  .top {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    /* padding: 1rem; */
+    display: grid;
+    place-items: center;
+    text-align: center;
+  }
+
+  .artist-name {
+    font-size: 80px;
+    grid-column: 1 / span 1;
+}
+
+.tour {
+ 
+  font-weight: bold;
+  font-family: monospace;
+  font-size: 1.5em;
+}
+
+.tour-box {
+  grid-column: 3 / span 1;
+  padding: .5rem;
+  background:rgba(255, 255, 255, 0.105);
+  border-radius: 5px;
+  box-shadow:0 0 10px rgba(0, 0, 0, 0.2);
+  border: 1px solid #aaaaaa;
+}
+
+.tour-box:hover{
+  transform: scale(1.1)
+}
 
   .socials {
     display: grid;
@@ -85,7 +116,7 @@ header {
     height: auto;
     display: grid;
     grid-gap: 1rem;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
   }
 
   .visual {
