--- a/public/share.css
+++ b/public/share.css
@@ -24,13 +24,14 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background: #2d3436;
-    color: #f1f1f1;
+    background: #a9a37330;
+    color: #000000;
     text-align: center;
     line-height: 80px;
     z-index: 999;
     transition: .6s linear;
     border-radius: 40px;
+    /* opacity: 0; */
 }
 
 .share-button:hover span {
