--- a/views/show.ejs
+++ b/views/show.ejs
@@ -112,16 +112,19 @@
     </main>
 
     <section class="sidebar-right">
+        <iframe src="<%= oneArtist.spotify %> " width="100%" height="380" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+       <br>
+       <br>
         <section id="share-section">
             <div class="share-button">
-                <span><i class="fas fa-share-alt"></i> More <%= oneArtist.artistName%>!</span>
+                <span><i class="fas fa-share-alt"></i> More <em><%= oneArtist.artistName%>!</em></span>
                 <a href="#"><i class="fab fa-facebook-square"></i></a>
                 <a href="#"><i class="fab fa-twitter"></i></a>
                 <a href="#"><i class="fab fa-instagram"></i></a>
                 <a href="#"><i class="fab fa-youtube"></i></a>
             </div>
         </section>
-        <iframe src="<%= oneArtist.spotify %> " width="100%" height="380" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+      
     </section>
 
     <footer>
