spotify color scheme

--- a/public/show.css
+++ b/public/show.css
@@ -40,7 +40,7 @@ header {
     display: flex;
     flex-direction: column;
     padding: 2rem;
-    background: rgba(39, 41, 39, 0.262);
+    background: rgba(51, 52, 51, 0.262);
   }
 
   main {
@@ -134,11 +134,12 @@ header {
     flex-direction: column;
     padding: 1rem;
     justify-content: space-between;
-    background: rgba(211, 182, 211, 0.413);
+    background-color: rgba(240, 255, 255, 0.071)
+    
   }
 
   .card:hover {
-    background-color: rgba(240, 255, 255, 0.071);
+    background: rgba(30, 255, 0, 0.392);
   }
 
   .artist-pics {
