--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -36,6 +36,15 @@
         <label for="video"> Video:</label>
         <input type="text" name="video" value="<%= oneArtist.video %>">
         <br>
+        <label for="about"> About:</label>
+        <input type="text" name="about" value="<%= oneArtist.about %>">
+        <br>
+        <label for="tour"> Tour:</label>
+        <input type="text" name="tour" value="<%= oneArtist.tour %>">
+        <br>
+        <label for="merch"> Merch:</label>
+        <input type="text" name="merch" value="<%= oneArtist.merch %>">
+        <br>
         <input type="submit" value="add">
     </form>
 <!--         
