--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,20 +1,28 @@
-<link rel="stylesheet" href="/app.css">
+<!-- <link rel="stylesheet" href="/app.css"> -->
+<link rel="stylesheet" href="/video.css">
 <nav>
-    <span>
-        <h1><em>Label</em></h1>
-        <a href="/">Home</a>
-        <a href="/label">Artists</a>
-        <a href="/label/new">Submissions</a>
-    
-    </span>
+    <header>
+        <a href='/' class="brand"> <em>Label</em></a>
+        <div class="navigation">
+            <div class="nav-items">
+                <a href="/">Home</a>
+                <a href="#">About</a>
+                <a href="/label">Artists</a>
+                <a href="/label/new">Submissions</a>
+                <a href="#">Contact</a>
 
+            </div>
+        </div>
+    </header>
+
+<!-- 
     <form id="search-bar">
         <input 
             id="search-term"
             type="text"
             placeholder="Search"
             value=""
-        >
+        > -->
         <!-- <input type="submit"> -->
     </form>
 </nav>
