--- a/public/video.css
+++ b/public/video.css
@@ -22,11 +22,15 @@ header {
 }
 
 header .brand {
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     font-size: 1.5em;
     font-weight: 700;
     text-transform: uppercase;
     text-decoration: none;
+}
+
+header .brand:hover {
+ color:rgba(30, 255, 0, 0.392);
 }
 
 header .navigation {
@@ -35,7 +39,7 @@ header .navigation {
 
 header .navigation .nav-items a {
     position: relative;
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     font-size: 1em;
     font-weight: 500;
     text-decoration: none;
@@ -43,10 +47,14 @@ header .navigation .nav-items a {
     transition: 0.3s ease;
 }
 
+header .navigation .nav-items a:hover{
+    color:rgba(0, 0, 0, 0.392);
+}
+
 header .navigation .nav-items a:before {
     content: "";
     position: absolute;
-    background: rgb(0, 0, 0);
+    background: rgb(255, 255, 255);
     width: 0%;
     height: 3px;
     bottom: 0;
@@ -69,7 +77,7 @@ section{
     display: flex;
     justify-content: center;
     flex-direction: column;
-    background: #2696E9;
+    background: #ffffff;
 }
 
 .home .content {
@@ -128,4 +136,14 @@ section{
 
 .home .media-icons a:hover{
     transform: scale(1.3)
+}
+
+.home video{
+    z-index: 000;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
