--- a/public/app.css
+++ b/public/app.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
+body {
+    background: black;
+    color: white;
+    font-family: "Bebas", sans-serif;
+}
+
 nav {
     background-color: rgba(29, 115, 189, 0.208);
     text-align: center;
@@ -17,10 +25,7 @@ nav {
       
 }
 
-.artist-list:hover figcaption {
-    color: rgb(255, 241, 159);
-   
-}
+
 .artist-list:hover img {
     opacity: .5;
    
