--- a/public/show.css
+++ b/public/show.css
@@ -61,13 +61,6 @@ header {
     /* background: pink; */
   }
 
-  .header-gif {
-    width: 100%; 
-    height: 300px;
-    overflow-y: hidden;
-  }
-
-  
   .sidebar-left {
       grid-column: 1 / 2;
       grid-row: 1/ 3;
@@ -100,16 +93,25 @@ header {
 
   .top {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     /* padding: 1rem; */
     display: grid;
     place-items: center;
     text-align: center;
   }
 
+
+  .header-gif {
+    width: 100%; 
+    height: 300px;
+    overflow-y: hidden;
+    border-radius: 20px;
+    /* grid-column: 1 / span 2; */
+  }
+
   .artist-name {
     font-size: 80px;
-    grid-column: 1 / span 1;
+    grid-column: 1/ span 2;
 }
 
 .tour {
@@ -120,7 +122,7 @@ header {
 }
 
 .tour-box {
-  grid-column: 2 / span 2;
+  grid-column: 3 / span 2;
   padding: .5rem;
   background:rgba(255, 255, 255, 0.105);
   border-radius: 5px;
@@ -213,5 +215,5 @@ header {
 
   footer {
     grid-column: 1 / 4;
-    background: rgba(211, 182, 211, 0.413);
+    background: rgba(45, 45, 45, 0.413);
   }
