--- a/public/video.css
+++ b/public/video.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
+body{
+    background: black;
+}
 
 nav {
     margin: 0;
@@ -48,7 +51,7 @@ header .navigation .nav-items a {
 }
 
 header .navigation .nav-items a:hover{
-    color:rgba(0, 0, 0, 0.392);
+    color:rgba(254, 254, 254, 0.392);
 }
 
 header .navigation .nav-items a:before {
@@ -72,7 +75,7 @@ section{
 
 .home{
     position: relative;
-    width: 80%;
+    width: 72%;
     min-height: 100vh;
     display: flex;
     justify-content: center;
@@ -85,6 +88,7 @@ section{
     color: #fff;
     width: 70%;
     margin-top: 50px;
+    
 }
 
 .home .content h1{
@@ -106,13 +110,17 @@ section{
 }
 
 .home .content a{
-    background: #fff;
+    background: rgb(255, 255, 255);
     padding: 15px 35px;
-    color: #1680AC;
+    color: #000000;
     font-size: 1.1em;
     font-weight: 500;
     text-decoration: none;
     border-radius: 2;
+}
+
+.home .content a:hover{
+    background: rgba(255, 255, 255, 0.536);
 }
 
 .home .media-icons{
