instal gh pages

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -18,7 +18,7 @@
     <section class="home">
         <video class="video-slide" src="/media/297342_Level_Button_Music_Mixer_Volume_Levels_by_Piotrek_Naumowicz_Artgrid-HD_H264-HD.mp4" autoplay muted loop></video>
         <div class="content">
-            <h1>Label <br><em>out of the box </em></h1>
+            <h1>Label <br><em>out the box </em></h1>
             <p>Lormen is dolor sit amet, consectetur adipiscing elit sed diam nonum et dolor diam</p>
             <a href="#">Read more</a>
         </div>
@@ -29,6 +29,5 @@
             <a href="#"><i class="fab fa-youtube"></i></a>
         </div>
     </section>
-
     </body>
 </html>
