--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -7,7 +7,7 @@
             <div class="nav-items">
                 <a href="/">Home</a>
                 <a href="#">About</a>
-                <a href="/label">Artists</a>
+                <a href="/label">Signed</a>
                 <a href="/label/new">Submissions</a>
                 <a href="#">Contact</a>
 
