--- a/views/show.ejs
+++ b/views/show.ejs
@@ -19,10 +19,10 @@
         <div class="navigation">
             <div class="nav-items">
                 <a href="/">Home</a>
-                <a href="#">About</a>
                 <a href="/label">Signed</a>
-                <a href="/label/new">Submissions</a>
-                <a href="#">Contact</a>
+                <!-- <a href="#">About</a> -->
+                <!-- <a href="/label/new">Submissions</a> -->
+                <!-- <a href="#">Contact</a> -->
 
             </div>
         </nav>    
