--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -6,10 +6,10 @@
         <div class="navigation">
             <div class="nav-items">
                 <a href="/">Home</a>
-                <a href="#">About</a>
                 <a href="/label">Signed</a>
-                <a href="/label/new">Submissions</a>
-                <a href="#">Contact</a>
+                <!-- <a href="#">About</a> -->
+                <!-- <a href="/label/new">Submissions</a> -->
+                <!-- <a href="#">Contact</a> -->
 
             </div>
         </div>
