--- a/views/show.ejs
+++ b/views/show.ejs
@@ -152,7 +152,7 @@
     </section>
 
     <footer>
-        <a href="/label/<%= oneArtist._id %>/edit ">Edit</a>
+        <!-- <a href="/label/<%= oneArtist._id %>/edit ">Edit</a> -->
     </footer>
 
     <!-- JAVASCRIPT -->
